third_party/blink/web_tests/external/wpt/xslt/idlharness.tentative.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
PASS XSLTProcessor interface: existence and properties of interface object
PASS XSLTProcessor interface object length
PASS XSLTProcessor interface object name
PASS XSLTProcessor interface: existence and properties of interface prototype object
PASS XSLTProcessor interface: existence and properties of interface prototype object's "constructor" property
PASS XSLTProcessor interface: existence and properties of interface prototype object's @@unscopables property
PASS XSLTProcessor interface: operation importStylesheet(Node)
PASS XSLTProcessor interface: operation transformToFragment(Node, Document)
PASS XSLTProcessor interface: operation transformToDocument(Node)
PASS XSLTProcessor interface: operation setParameter(DOMString, DOMString, any)
PASS XSLTProcessor interface: operation getParameter(DOMString, DOMString)
PASS XSLTProcessor interface: operation removeParameter(DOMString, DOMString)
PASS XSLTProcessor interface: operation clearParameters()
PASS XSLTProcessor interface: operation reset()
Harness: the test ran to completion.

